--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <!-- 页面头部信息 -->
     <meta charset="UTF-8">
-    <title>XQ_RearchDocument</title>
+    <title>HT_RearchDocument</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport"
@@ -95,7 +95,7 @@ pre {
             // 项目名称
             name: 'DocsifyMaster',
             // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
-            repo: 'https://github.com/ruanjianshi?tab=repositories',
+            repo: 'https://github.com/XiaoHuZi-design?tab=repositories',
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
             loadSidebar: true,
             autoHeader: true,
@@ -220,7 +220,7 @@ pre {
                 function(hook, vm) {
                 hook.beforeEach(function(html) {
                     var url =
-                    'https://github.com/ruanjianshi/XQ_BLOG/blob/master/' +
+                    'https://github.com/XiaoHuZi-design/web-HT_Libra/tree/main' +
                     vm.route.file;
                     var editHtml = '[📝 EDIT DOCUMENT](' + url + ')\n';
 
@@ -360,9 +360,9 @@ pre {
     clientID: 'Ov23lieSfcUy64KUFiKU',
     clientSecret: 'b54a7acbc68bd907eccd1fde147d977ab99bc928',
     repo: 'discuss_gitalk',
-    owner: 'ruanjianshi',
-    admin: ['ruanjianshi'],
-    //title: 'xq',
+    owner: 'HT_Libra',
+    admin: ['HT_Libra'],
+    //title: 'ht',
     distractionFreeMode: false
   })
 </script> 
