--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-cpp.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-cpp.min.js"></script>
 
+    <!--代码行号显示与阅读量统计-->
+    <script src="highlight-line.js"></script>
+    <script src="read-num.js"></script>
+    <!--加密文本 CRYPOTOJS库-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script> 
+    <script src="document_encryption.js"></script>
 
      <!--评论系统-->
      <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
