--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 id: location.pathname, // 使用当前页面路径作为唯一标识符
                 clientID: 'Ov23ctkR3x4dcec6C8kY',
                 clientSecret: '7531a15e87dcba97e0b234d9b140f46b23dd67ec',
-                repo: 'discuss_gitalk',
+                repo: 'libra_discuss',
                 owner: 'XiaoHuZi-design',
                 admin: ['XiaoHuZi-design'],
                 distractionFreeMode: false
