--- a/index.html
+++ b/index.html
@@ -94,7 +94,18 @@
             // 启用相对路径
             relativePath: true,
             // 加载侧边栏中出现的网页图标
-            logo: '_media/LogosBun.svg',
+            //logo: '_media/LogosBun.svg',
+            //logo: '_media/icon/摸鱼办公.png',    
+            //logo: '_media/icon/摸鱼.png',
+            //logo: '_media/icon/Ai.png',
+            //logo: '_media/icon/教育科研.png',
+            // logo: '_media/icon/一起摸鱼.png',
+            // logo: '_media/icon/汉堡可乐.png',
+            // logo: '_media/icon/机器人.png',
+            //logo: '_media/icon/博客.png',
+            // logo: '_media/icon/博客专家.png',
+            logo: '_media/images/05.jpg',
+
 
             //执行文档里的script标签
             executeScript: true,
