--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         .line-numbers {
             width: 40px;
             padding: 0;
-            user-select: none;
+            /* user-select: none; */
+            /* 允许用户选择和复制文本 */
+            user-select: text;
             text-align: right;
             color: #888;
             background: transparent;
