--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             padding: 0;
             /* user-select: none; */
             /* 允许用户选择和复制文本 */
-            user-select: text;
+            user-select: text;   // auto，text, none
             text-align: right;
             color: #888;
             background: transparent;
